syntax = "proto3";

package cloudone.api.core.v1;

import "google/protobuf/struct.proto";

message Filter {
    oneof key_alias {
        string key = 1;
        string k = 2;
    }

    oneof value_alias {
        google.protobuf.Value value = 3;
        google.protobuf.Value v = 4;
    }

    oneof operator_alias {
        string operator = 5;
        string o = 6;
    }
}

message Sort {
    string key = 1;
    bool desc = 2;
}

message Page {
    uint32 start = 1;
    uint32 limit = 2;
}

message Query {
    repeated Filter filter = 1;
    repeated Filter filter_or = 2;
    Sort sort = 3;
    Page page = 4;
    bool minimal = 5;
    bool count_only = 6;
    repeated string only = 7;
}
